small css change

--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -71,8 +71,8 @@
                 <div class="col-md-3">
                     <h4>Contact</h4>
                     <ul>
-                        <li>+31760536372</li>
-                        <li>tr@conexus.com</li>
+                        <li>Email:info@conexussolution.com</li>
+                        <li>+1 (317)6145648</li>
                     </ul>
                 </div>
             </div>
