--- a/tracker/templates/home.html
+++ b/tracker/templates/home.html
@@ -2,14 +2,12 @@
 {% set active_page = 'home' %}
 {% block title %} All Projects {% endblock %}
 {% block content %}
-<p class="mt-5">
-    This is the demo app
-    <em>for</em>
-    <a href="#">Conexus Solutions</a>
-</p>
-<div class="container mt-3">
-    <div class="jumbotron">
-        <h2>Overview</h2>
+
+
+<!--<div class="container mt-3" style="background-image: url(static/paysage.png)">-->
+<div class="container mt-3" style="background:transparent url(static/paysage.png) no-repeat center center /cover">
+    <div class="text-white">
+        <h1  style="text-align: center">DESIGN & ENGINEERING SOLUTIONS</h1>
         <p>
          Conexus Solutions offers a diverse set of design and engineering solutions in both the telecommunication and electric utility markets.
             We specialize in assisting communication companies and electric utilities with all facets of the Joint Use process. We provide customer
@@ -17,7 +15,22 @@
             step of the design process. Our attention to detail and ability to adapt and meet the specific customer needs has helped to reduce cost
             and increase speed to market for the end customer. We look forward to working with you to see how we can best tailor our services to your needs.
         </p>
-        <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+
+                <p>
+         Conexus Solutions offers a diverse set of design and engineering solutions in both the telecommunication and electric utility markets.
+            We specialize in assisting communication companies and electric utilities with all facets of the Joint Use process. We provide customer
+            focused solutions in an accurate and timely manner. Our team focuses on providing efficient, economical, and accurate solutions at every
+            step of the design process. Our attention to detail and ability to adapt and meet the specific customer needs has helped to reduce cost
+            and increase speed to market for the end customer. We look forward to working with you to see how we can best tailor our services to your needs.
+        </p>
+
+        <p>
+         Conexus Solutions offers a diverse set of design and engineering solutions in both the telecommunication and electric utility markets.
+            We specialize in assisting communication companies and electric utilities with all facets of the Joint Use process. We provide customer
+            focused solutions in an accurate and timely manner. Our team focuses on providing efficient, economical, and accurate solutions at every
+            step of the design process. Our attention to detail and ability to adapt and meet the specific customer needs has helped to reduce cost
+            and increase speed to market for the end customer. We look forward to working with you to see how we can best tailor our services to your needs.
+        </p>
     </div>
 </div>
 
