--- a/tracker/templates/services.html
+++ b/tracker/templates/services.html
@@ -5,59 +5,58 @@
 <div class="container mt-3">
     <!-- Example row of columns -->
     <div class="row">
-        <div class="col-md-3">
-            <h2>Loading Analysis</h2>
+        <div class="col-md-4">
+            <h3 class="text-primary">Loading Analysis</h3>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                euismod. Donec sed odio dui. </p>
+                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada.</p>
             <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
-        <div class="col-md-3">
-            <h2>Aerial make ready review and Solutions</h2>
+        <div class="col-md-4">
+            <h3 class="text-primary">Aerial make ready review and Solutions</h3>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta se. </p>
         </div>
-        <div class="col-md-3">
-            <h2>CAD Services</h2>
+        <div class="col-md-4">
+            <h3 class="text-primary">CAD Services</h3>
             <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula
                 porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
                 fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-3">
-            <h2>Consulting</h2>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
     </div>
 
       <div class="row">
-        <div class="col-md-3">
-            <h2>GIS Data Entry and Management</h2>
+        <div class="col-md-4">
+            <h3 class="text-primary">GIS Data Entry and Management</h3>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
                 condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
                 euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
-        <div class="col-md-3">
-            <h2>Work order design</h2>
+        <div class="col-md-4">
+            <h3 class="text-primary">Work order design</h3>
             <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
                 condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
                 euismod. Donec sed odio dui. </p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
         </div>
-        <div class="col-md-3">
-            <h2>Permitting Preparation Services</h2>
+        <div class="col-md-4">
+            <h3 class="text-primary">Permitting Preparation Services</h3>
             <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula
-                porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
-                fermentum massa justo sit amet risus.</p>
-            <p><a class="btn btn-default" href="#" role="button">Add bookmark &raquo;</a></p>
+                porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum..</p>
         </div>
     </div>
+
+     <div class="row">
+        <div class="col-md-4">
+        </div>
+        <div class="col-md-4">
+            <h3 class="text-primary">Work order design</h3>
+            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
+                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta </p>
+            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        </div>
+        <div class="col-md-4">
+        </div>
+    </div>
+
 </div>
 
 
