--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -57,20 +57,30 @@
     {% endwith %}
     {% block content %}
     {% endblock %}
-<hr>
 
-    <footer>
+</div>
+
+ <footer id="foot-menu">
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <p>&copy; Conexus Solutions {{ year }}</p>
+                    <p id="cp-right">&copy; Conexus Solutions {{ year }}</p>
                 </div>
                 <div class="col-md-6">
-
+                    <h4 class="hd-lst">Services</h4>
+                    <ul class="bt-lst">
+                        <li>Loading Analysis</li>
+                        <li>CAD Services</li>
+                        <li>Aerial make ready review and Solutions</li>
+                        <li>GIS Data Entry and Management</li>
+                        <li>Work order design</li>
+                        <li>Permitting Preparation Services</li>
+                        <li>Work order design</li>
+                    </ul>
                 </div>
-                <div class="col-md-3">
-                    <h4>Contact</h4>
-                    <ul>
+                <div class="col-md-3 mt-10">
+                    <h4 class="hd-lst">Contact us</h4>
+                    <ul class="bt-lst">
                         <li>Email:info@conexussolution.com</li>
                         <li>+1 (317)6145648</li>
                     </ul>
@@ -78,7 +88,6 @@
             </div>
         </div>
     </footer>
-</div>
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
