--- a/tracker/static/main.css
+++ b/tracker/static/main.css
@@ -95,7 +95,7 @@ a.article-title:hover {
 .bt-lst{
     margin: 10px;
     padding: 10px;
-    list-style: none;
+    list-style-type: circle;
 }
 
 .hd-lst{
