--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -25,11 +25,12 @@
             <div class="collapse navbar-collapse" id="navbarToggle">
                 <div class="navbar-nav mr-auto">
                     <a class="nav-item nav-link {{ 'active' if active_page == 'home' else '' }}" href="{{ url_for('main.home') }}">Home</a>
-                    <a class="nav-item nav-link {{ 'active' if active_page == 'account' else '' }}" href="{{ url_for('main.account') }}">Account</a>
                     <a class="nav-item nav-link {{ 'active' if active_page == 'account' else '' }}" href="{{ url_for('main.services') }}">Services</a>
+                    <a class="nav-item nav-link {{ 'active' if active_page == 'account' else '' }}" href="#">Contact</a>
 
                 </div>
                 <!-- Navbar Right Side -->
+                <!--
                 <div class="navbar-nav">
                     {% if current_user.is_authenticated %}
                         <a class="nav-item nav-link" href="{{ url_for('users.logout') }}">Logout</a>
@@ -41,6 +42,8 @@
                     <a class="nav-item nav-link {{ 'active' if active_page == 'careers' else '' }}" href="{{ url_for('main.careers') }}">Careers</a>
 
                 </div>
+                -->
+
             </div>
         </div>
     </nav>
@@ -69,13 +72,10 @@
                 <div class="col-md-6">
                     <h4 class="hd-lst">Services</h4>
                     <ul class="bt-lst">
-                        <li>Loading Analysis</li>
-                        <li>CAD Services</li>
-                        <li>Aerial make ready review and Solutions</li>
-                        <li>GIS Data Entry and Management</li>
-                        <li>Work order design</li>
-                        <li>Permitting Preparation Services</li>
-                        <li>Work order design</li>
+                        <li>Electric Distribution and transmission design engineering</li>
+                        <li>FOC Engineering Design</li>
+                        <li>Wireless Network Design Services</li>
+                        <li>Consulting</li>
                     </ul>
                 </div>
                 <div class="col-md-3 mt-10">
