--- a/tracker/templates/services.html
+++ b/tracker/templates/services.html
@@ -5,57 +5,47 @@
 <div class="container mt-3">
     <!-- Example row of columns -->
     <div class="row">
-        <div class="col-md-4">
-            <h3 class="text-primary">Loading Analysis</h3>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada.</p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
+        <div class="col-md-6">
+            <h3 class="text-primary">Electric Distribution and transmission design engineering</h3>
+            <ul class="bt-lst">
+                <li>Transmission and Distribution line review and Engineering</li>
+                <li>Line hardening and resiliency</li>
+                <li>Work order design</li>
+                <li>ROW and Relocation design</li>
+            </ul>
         </div>
-        <div class="col-md-4">
-            <h3 class="text-primary">Aerial make ready review and Solutions</h3>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta se. </p>
-        </div>
-        <div class="col-md-4">
-            <h3 class="text-primary">CAD Services</h3>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula
-                porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut
-                fermentum massa justo sit amet risus.</p>
+        <div class="col-md-6">
+            <h3 class="text-primary">FOC Engineering Design</h3>
+         <ul class="bt-lst">
+                <li>Aerial and Underground Design</li>
+                <li>joint Use Engineering: Review and solutions</li>
+                <li>CAD/GIS Services</li>
+            </ul>
         </div>
     </div>
 
       <div class="row">
-        <div class="col-md-4">
-            <h3 class="text-primary">GIS Data Entry and Management</h3>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                euismod. Donec sed odio dui. </p>
+        <div class="col-md-6">
+            <h3 class="text-primary">Consulting</h3>
+            <ul class="bt-lst">
+                <li>JUA Consulting</li>
+                <li>Easement acquisition</li>
+                <li>ROW Relocation</li>
+                <li>Permitting preparation services</li>
+            </ul>
         </div>
-        <div class="col-md-4">
-            <h3 class="text-primary">Work order design</h3>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis
-                euismod. Donec sed odio dui. </p>
-        </div>
-        <div class="col-md-4">
-            <h3 class="text-primary">Permitting Preparation Services</h3>
-            <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula
-                porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum..</p>
+          <div class="col-md-6">
+            <h3 class="text-primary">Wireless Network Design Services</h3>
+              <ul class="bt-lst">
+                <li>Wireless network design services for all outdoor and all indoor configured microwave PTP link </li>
+                <li>Network design services for panel style and dish style antennas in microwave PTP link</li>
+                <li>Antenna selection and assistance for microwave PTP link</li>
+                <li>Assistance with determining polarization benefits for each microwave PTP link</li>
+            </ul>
         </div>
     </div>
 
-     <div class="row">
-        <div class="col-md-4">
-        </div>
-        <div class="col-md-4">
-            <h3 class="text-primary">Work order design</h3>
-            <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris
-                condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta </p>
-            <p><a class="btn btn-default" href="#" role="button">View details &raquo;</a></p>
-        </div>
-        <div class="col-md-4">
-        </div>
-    </div>
+
 
 </div>
 
