--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -25,8 +25,8 @@
             <div class="collapse navbar-collapse" id="navbarToggle">
                 <div class="navbar-nav mr-auto">
                     <a class="nav-item nav-link {{ 'active' if active_page == 'home' else '' }}" href="{{ url_for('main.home') }}">Home</a>
-                    <a class="nav-item nav-link {{ 'active' if active_page == 'account' else '' }}" href="{{ url_for('main.services') }}">Services</a>
-                    <a class="nav-item nav-link {{ 'active' if active_page == 'account' else '' }}" href="#">Contact</a>
+                    <a class="nav-item nav-link {{ 'active' if active_page == 'services' else '' }}" href="{{ url_for('main.services') }}">Services</a>
+                    <a class="nav-item nav-link {{ 'active' if active_page == 'contact' else '' }}" href="{{ url_for('main.contact') }}">Contact</a>
 
                 </div>
                 <!-- Navbar Right Side -->
@@ -67,7 +67,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <p id="cp-right">&copy; Conexus Solutions {{ year }}</p>
+                    <p id="cp-right">&copy; Conexus Solutions 2020</p>
                 </div>
                 <div class="col-md-6">
                     <h4 class="hd-lst">Services</h4>
@@ -79,7 +79,7 @@
                     </ul>
                 </div>
                 <div class="col-md-3 mt-10">
-                    <h4 class="hd-lst">Contact us</h4>
+                    <h4><a class="hd-lst" href="{{ url_for('main.contact') }}">Contact us</a></h4>
                     <ul class="bt-lst">
                         <li>Email:info@conexussolution.com</li>
                         <li>+1 (317)6145648</li>
