--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -17,7 +17,9 @@
 <header class="site-header">
     <nav class="navbar navbar-expand-md navbar-dark bg-secondary fixed-top">
         <div class="container">
-            <a class="navbar-brand mr-4" href="/">Conexus</a>
+            <a class="navbar-brand mr-4" href="/">
+                <img src="{{ url_for('static', filename='connexus.png') }}" height="40px">
+            </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
                     aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
