--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -12,7 +12,7 @@
     <title>Conexus Solutions</title>
     {% endif %}
 </head>
-<body>
+<body style="background:transparent url(static/paysage.png) no-repeat center center /cover">
 
 <header class="site-header">
     <nav class="navbar navbar-expand-md navbar-dark bg-secondary fixed-top">
