Changed navbar menu bg color

--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -15,7 +15,7 @@
 <body style="background:transparent url(static/paysage.png) no-repeat center center /cover">
 
 <header class="site-header">
-    <nav class="navbar navbar-expand-md navbar-dark bg-secondary fixed-top">
+    <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand mr-4" href="/">
                 <img src="{{ url_for('static', filename='connexus.png') }}" height="40px">
