--- a/tracker/templates/home.html
+++ b/tracker/templates/home.html
@@ -10,13 +10,13 @@
     <div class="text-white">
         <div style="text-align: center"><img src="{{ url_for('static', filename='connexus.png') }}" height="200px">
         </div>
-        <p >
+        <div>
          Conexus Solutions offers a diverse set of design and engineering solutions in both the telecommunication and electric utility markets.
             We specialize in assisting communication companies and electric utilities with all facets of the Joint Use process. We provide customer
             focused solutions in an accurate and timely manner. Our team focuses on providing efficient, economical, and accurate solutions at every
             step of the design process. Our attention to detail and ability to adapt and meet the specific customer needs has helped to reduce cost
             and increase speed to market for the end customer. We look forward to working with you to see how we can best tailor our services to your needs.
-        </p>
+        </div>
 
 
     </div>
