--- a/tracker/templates/home.html
+++ b/tracker/templates/home.html
@@ -10,7 +10,7 @@
     <div class="text-white">
         <div style="text-align: center"><img src="{{ url_for('static', filename='connexus.png') }}" height="200px">
         </div>
-        <div>
+        <div id="hm-ct">
          Conexus Solutions offers a diverse set of design and engineering solutions in both the telecommunication and electric utility markets.
             We specialize in assisting communication companies and electric utilities with all facets of the Joint Use process. We provide customer
             focused solutions in an accurate and timely manner. Our team focuses on providing efficient, economical, and accurate solutions at every
