--- a/tracker/templates/services.html
+++ b/tracker/templates/services.html
@@ -7,7 +7,7 @@
     <!-- Example row of columns -->
     <div class="row">
         <div class="col-md-6">
-            <h3 class="text-primary">Electric Distribution and transmission design engineering</h3>
+            <h3 class="sv-title">Electric Distribution and transmission design engineering</h3>
             <ul class="bt-lst">
                 <li>Transmission and Distribution line review and Engineering</li>
                 <li>Line hardening and resiliency</li>
@@ -16,7 +16,7 @@
             </ul>
         </div>
         <div class="col-md-6">
-            <h3 class="text-primary">FOC Engineering Design</h3>
+            <h3 class="sv-title">FOC Engineering Design</h3>
          <ul class="bt-lst">
                 <li>Aerial and Underground Design</li>
                 <li>joint Use Engineering: Review and solutions</li>
@@ -27,7 +27,7 @@
 
       <div class="row">
         <div class="col-md-6">
-            <h3 class="text-primary">Consulting</h3>
+            <h3 class="sv-title">Consulting</h3>
             <ul class="bt-lst">
                 <li>JUA Consulting</li>
                 <li>Easement acquisition</li>
@@ -36,7 +36,7 @@
             </ul>
         </div>
           <div class="col-md-6">
-            <h3 class="text-primary">Wireless Network Design Services</h3>
+            <h3 class="sv-title">Wireless Network Design Services</h3>
               <ul class="bt-lst">
                 <li>Wireless network design services for all outdoor and all indoor configured microwave PTP link </li>
                 <li>Network design services for panel style and dish style antennas in microwave PTP link</li>
