small fix to contact page

--- a/tracker/templates/home.html
+++ b/tracker/templates/home.html
@@ -6,9 +6,9 @@
 
 <!--<div class="container mt-3" style="background-image: url(static/paysage.png)">-->
 <!--<div class="container mt-3" style="background:transparent url(static/paysage.png) no-repeat center center /cover">-->
-<div class="container mt-3" >
+<div class="container mt-3 mb-50" >
     <div class="text-white">
-        <div style="text-align: center"><img src="{{ url_for('static', filename='connexus.png') }}" height="200px">
+        <div style="text-align: center"><img src="{{ url_for('static', filename='connexus.png') }}" height="220px">
         </div>
         <div id="hm-ct">
          Conexus Solutions offers a diverse set of design and engineering solutions in both the telecommunication and electric utility markets.
