--- a/tracker/templates/contact.html
+++ b/tracker/templates/contact.html
@@ -4,7 +4,7 @@
 {% block content %}
 
 <div class="container">
-    <h3 class="display-4 text-muted">Contact us</h3>
+    <h3 class="display-4 sv-title">Contact us</h3>
     <form method="POST" action="contactus">
         {{ form.hidden_tag() }}
         <div class="form-group">
@@ -21,7 +21,7 @@
         </div>
         <div class="form-group">
             {{form.message.label}}
-            {{form.message(class="form-control", rows="3")}}
+            {{form.message(class="form-control", rows="4")}}
         </div>
         {{ form.submit(class="btn btn-info form-control") }}
     </form>
