--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -18,7 +18,7 @@
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <div class="container">
             <a class="navbar-brand mr-4" href="/">
-                <img src="{{ url_for('static', filename='connexus.png') }}" height="40px">
+                <img src="{{ url_for('static', filename='conexus-logo.png') }}" height="40px">
             </a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggle"
                     aria-controls="navbarToggle" aria-expanded="false" aria-label="Toggle navigation">
