--- a/tracker/templates/services.html
+++ b/tracker/templates/services.html
@@ -6,7 +6,8 @@
 <div class="container mt-3">
     <!-- Example row of columns -->
     <div class="row">
-        <div class="col-md-6">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
             <h3 class="sv-title">Electric Distribution and transmission design engineering</h3>
             <ul class="bt-lst">
                 <li>Transmission and Distribution line review and Engineering</li>
@@ -15,7 +16,11 @@
                 <li>ROW and Relocation design</li>
             </ul>
         </div>
-        <div class="col-md-6">
+        <div class="col-md-2"></div>
+    </div>
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
             <h3 class="sv-title">FOC Engineering Design</h3>
          <ul class="bt-lst">
                 <li>Aerial and Underground Design</li>
@@ -23,10 +28,12 @@
                 <li>CAD/GIS Services</li>
             </ul>
         </div>
+        <div class="col-md-2"></div>
     </div>
 
       <div class="row">
-        <div class="col-md-6">
+          <div class="col-md-2"></div>
+        <div class="col-md-8">
             <h3 class="sv-title">Consulting</h3>
             <ul class="bt-lst">
                 <li>JUA Consulting</li>
@@ -35,7 +42,11 @@
                 <li>Permitting preparation services</li>
             </ul>
         </div>
-          <div class="col-md-6">
+          <div class="col-md-2"></div>
+      </div>
+        <div class="row">
+            <div class="col-md-2"></div>
+          <div class="col-md-8">
             <h3 class="sv-title">Wireless Network Design Services</h3>
               <ul class="bt-lst">
                 <li>Wireless network design services for all outdoor and all indoor configured microwave PTP link </li>
@@ -44,6 +55,7 @@
                 <li>Assistance with determining polarization benefits for each microwave PTP link</li>
             </ul>
         </div>
+            <div class="col-md-2"></div>
     </div>
 
 
