--- a/tracker/templates/home.html
+++ b/tracker/templates/home.html
@@ -8,7 +8,7 @@
 <!--<div class="container mt-3" style="background:transparent url(static/paysage.png) no-repeat center center /cover">-->
 <div class="container mt-3 mb-50" >
     <div class="text-white">
-        <div style="text-align: center"><img src="{{ url_for('static', filename='connexus.png') }}" height="220px">
+        <div style="text-align: center"><img src="{{ url_for('static', filename='conexus-logo.png') }}" height="220px">
         </div>
         <div id="hm-ct">
          Conexus Solutions offers a diverse set of design and engineering solutions in both the telecommunication and electric utility markets.
