updated home and services  pages text

--- a/tracker/templates/home.html
+++ b/tracker/templates/home.html
@@ -12,10 +12,11 @@
         </div>
         <div id="hm-ct">
          Conexus Solutions offers a diverse set of design and engineering solutions in both the telecommunication and electric utility markets.
-            We specialize in assisting communication companies and electric utilities with all facets of the Joint Use process. We provide customer
-            focused solutions in an accurate and timely manner. Our team focuses on providing efficient, economical, and accurate solutions at every
-            step of the design process. Our attention to detail and ability to adapt and meet the specific customer needs has helped to reduce cost
-            and increase speed to market for the end customer. We look forward to working with you to see how we can best tailor our services to your needs.
+            We specialize in assisting communication companies and electric utilities with all facets of the Joint Use process.
+            We provide customer focused solutions in an accurate and timely manner. Our team focuses on providing efficient, economical,
+            and accurate solutions at every step of the utility design process. Our attention to detail and ability to meet the specific customer
+            needs helps to reduce cost and increase speed to market for the end customer. We look forward to partnering with you and tailoring
+            our services to best address your needs.
         </div>
 
 
