--- a/tracker/templates/services.html
+++ b/tracker/templates/services.html
@@ -10,10 +10,10 @@
         <div class="col-md-8">
             <h3 class="sv-title">Electric Distribution and transmission design engineering</h3>
             <ul class="bt-lst">
-                <li>Transmission and Distribution line review and Engineering</li>
-                <li>Line hardening and resiliency</li>
+                <li>Overhead & Underground line design</li>
+                <li>Line hardening and resiliency design</li>
                 <li>Work order design</li>
-                <li>ROW and Relocation design</li>
+                <li>Construction project management and design order process</li>
             </ul>
         </div>
         <div class="col-md-2"></div>
@@ -23,9 +23,9 @@
         <div class="col-md-8">
             <h3 class="sv-title">FOC Engineering Design</h3>
          <ul class="bt-lst">
-                <li>Aerial and Underground Design</li>
-                <li>joint Use Engineering: Review and solutions</li>
-                <li>CAD/GIS Services</li>
+                <li>Aerial and underground Design</li>
+                <li>Joint Use Engineering: Make ready review and solutions</li>
+                <li>CAD/ GIS Services</li>
             </ul>
         </div>
         <div class="col-md-2"></div>
@@ -34,12 +34,10 @@
       <div class="row">
           <div class="col-md-2"></div>
         <div class="col-md-8">
-            <h3 class="sv-title">Consulting</h3>
+            <h3 class="sv-title">Wireless Network Design Services</h3>
             <ul class="bt-lst">
-                <li>JUA Consulting</li>
-                <li>Easement acquisition</li>
-                <li>ROW Relocation</li>
-                <li>Permitting preparation services</li>
+                <li>Radio and Microwave network design</li>
+                <li>Network Design Consulting services</li>
             </ul>
         </div>
           <div class="col-md-2"></div>
@@ -47,12 +45,12 @@
         <div class="row">
             <div class="col-md-2"></div>
           <div class="col-md-8">
-            <h3 class="sv-title">Wireless Network Design Services</h3>
+            <h3 class="sv-title">Consulting</h3>
               <ul class="bt-lst">
-                <li>Wireless network design services for all outdoor and all indoor configured microwave PTP link </li>
-                <li>Network design services for panel style and dish style antennas in microwave PTP link</li>
-                <li>Antenna selection and assistance for microwave PTP link</li>
-                <li>Assistance with determining polarization benefits for each microwave PTP link</li>
+                <li>JUA Consulting</li>
+                <li>Easement acquisition</li>
+                <li>Facility Management</li>
+                <li>Permitting preparation Services</li>
             </ul>
         </div>
             <div class="col-md-2"></div>
