--- a/tracker/templates/services.html
+++ b/tracker/templates/services.html
@@ -10,7 +10,17 @@
         <div class="col-md-8">
             <h3 class="sv-title">Electric Distribution and transmission design engineering</h3>
             <ul class="bt-lst">
-                <li>Overhead & Underground line design</li>
+                <li>Overhead & Underground line design
+                    <ul>
+                        <li>Wood Pole design</li>
+                        <li>sag studies, Analysis and design</li>
+                        <li>Pole loading Analysis</li>
+                        <li>Underbuilt design</li>
+                        <li>System Expansion/New Line Design</li>
+                        <li>Overhead to Underground Conversion Design</li>
+                        <li>ROW and Relocation design</li>
+                    </ul>
+                </li>
                 <li>Line hardening and resiliency design</li>
                 <li>Work order design</li>
                 <li>Construction project management and design order process</li>
@@ -36,8 +46,24 @@
         <div class="col-md-8">
             <h3 class="sv-title">Wireless Network Design Services</h3>
             <ul class="bt-lst">
-                <li>Radio and Microwave network design</li>
-                <li>Network Design Consulting services</li>
+                <li>Radio and Microwave network design
+                    <ul>
+                        <li>Network topology and route design</li>
+                        <li>Path profiling and Performance prediction/analysis</li>
+                        <li>Interference Analysis</li>
+                        <li>Frequency band selection and coordination</li>
+                        <li>Loss/Attenuation Calculations</li>
+                        <li>Equipment selection</li>
+                    </ul>
+                </li>
+                <li>Network Design Consulting services
+                    <ul>
+                        <li>Feasibility study</li>
+                        <li>Solution development</li>
+                        <li>Implementation and integration planning</li>
+                        <li>Problem and opportunity assessment</li>
+                    </ul>
+                </li>
             </ul>
         </div>
           <div class="col-md-2"></div>
