--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -7,9 +7,9 @@
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='main.css') }}">
 
     {% if title %}
-    <title>Conexus Solutions- {{ title }} </title>
+    <title>Conexus Solution - {{ title }} </title>
     {% else %}
-    <title>Conexus Solutions</title>
+    <title>Conexus Solution</title>
     {% endif %}
 </head>
 <body style="background:transparent url(static/paysage.png) repeat center center /cover">
