--- a/tracker/templates/home.html
+++ b/tracker/templates/home.html
@@ -1,12 +1,13 @@
 {% extends "base.html" %}
 {% set active_page = 'home' %}
-{% block title %} All Projects {% endblock %}
+{% block title %} Home {% endblock %}
 {% block content %}
 
 
 <!--<div class="container mt-3" style="background-image: url(static/paysage.png)">-->
 <!--<div class="container mt-3" style="background:transparent url(static/paysage.png) no-repeat center center /cover">-->
-<div class="container mt-3 mb-50" >
+<!--<div class="container mt-3 mb-50">-->
+<div class="container">
     <div class="text-white">
         <div style="text-align: center"><img src="{{ url_for('static', filename='conexus-logo.png') }}" height="220px">
         </div>
