--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -12,8 +12,13 @@
     <title>Conexus Solution</title>
     {% endif %}
 </head>
-<body style="background:transparent url(static/paysage.png) repeat center center /cover">
 
+<!--<body style="background-color : #8c8c8c">-->
+    {% if  active_page == 'home' %}
+    <body style="background:transparent url(static/paysage.png) no-repeat center center /cover">
+    {% else %}
+    <body >
+    {% endif %}
 <header class="site-header">
     <nav class="navbar navbar-expand-md navbar-dark bg-dark fixed-top">
         <div class="container">
