Changed home page layout

--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -15,7 +15,7 @@
 
 <!--<body style="background-color : #8c8c8c">-->
     {% if  active_page == 'home' %}
-    <body style="background:transparent url(static/paysage.png) no-repeat center center /cover">
+    <body style="background:transparent url(static/paysage.png) repeat center center /cover">
     {% else %}
     <body >
     {% endif %}
