--- a/tracker/templates/home.html
+++ b/tracker/templates/home.html
@@ -4,13 +4,33 @@
 {% block content %}
 
 
-<!--<div class="container mt-3" style="background-image: url(static/paysage.png)">-->
-<!--<div class="container mt-3" style="background:transparent url(static/paysage.png) no-repeat center center /cover">-->
-<!--<div class="container mt-3 mb-50">-->
+
+<!--<div class="container">-->
+<!--    <div class="text-white">-->
+<!--        <div style="text-align: center"><img src="{{ url_for('static', filename='conexus-logo.png') }}" height="220px">-->
+<!--        </div>-->
+<!--        <div id="hm-ct">-->
+<!--         Conexus Solutions offers a diverse set of design and engineering solutions in both the telecommunication and electric utility markets.-->
+<!--            We specialize in assisting communication companies and electric utilities with all facets of the Joint Use process.-->
+<!--            We provide customer focused solutions in an accurate and timely manner. Our team focuses on providing efficient, economical,-->
+<!--            and accurate solutions at every step of the utility design process. Our attention to detail and ability to meet the specific customer-->
+<!--            needs helps to reduce cost and increase speed to market for the end customer. We look forward to partnering with you and tailoring-->
+<!--            our services to best address your needs.-->
+<!--        </div>-->
+
+
+<!--    </div>-->
+<!--</div>-->
+
+
+
+
 <div class="container">
     <div class="text-white">
         <div style="text-align: center"><img src="{{ url_for('static', filename='conexus-logo.png') }}" height="220px">
         </div>
+        <div class="row">
+            <div class="col-md-6">
         <div id="hm-ct">
          Conexus Solutions offers a diverse set of design and engineering solutions in both the telecommunication and electric utility markets.
             We specialize in assisting communication companies and electric utilities with all facets of the Joint Use process.
@@ -18,6 +38,9 @@
             and accurate solutions at every step of the utility design process. Our attention to detail and ability to meet the specific customer
             needs helps to reduce cost and increase speed to market for the end customer. We look forward to partnering with you and tailoring
             our services to best address your needs.
+        </div>
+            </div>
+            <div class="col-md-6"></div>
         </div>
 
 
