--- a/tracker/templates/home.html
+++ b/tracker/templates/home.html
@@ -33,7 +33,7 @@
             <div class="col-md-1"></div>
             <div class="col-md-6">
         <div id="hm-ct">
-         Conexus Solutions offers a diverse set of design and engineering solutions in both the telecommunication and electric utility markets.
+         Conexus Solution offers a diverse set of design and engineering solutions in both the telecommunication and electric utility markets.
             We specialize in assisting communication companies and electric utilities with all facets of the Joint Use process.
             We provide customer focused solutions in an accurate and timely manner. Our team focuses on providing efficient, economical,
             and accurate solutions at every step of the utility design process. Our attention to detail and ability to meet the specific customer
