--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -74,7 +74,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-md-3">
-                    <p id="cp-right">&copy; Conexus Solutions 2020</p>
+                    <p id="cp-right">&copy; Conexus Solution 2020</p>
                 </div>
                 <div class="col-md-6">
                     <h4 class="hd-lst">Services</h4>
