--- a/tracker/templates/contact.html
+++ b/tracker/templates/contact.html
@@ -4,6 +4,9 @@
 {% block content %}
 
 <div class="container">
+    <div class="row">
+        <div class="col-md-2"></div>
+        <div class="col-md-8">
     <h3 class="display-4 sv-title">Contact us</h3>
     <form method="POST" action="contactus">
         {{ form.hidden_tag() }}
@@ -25,6 +28,10 @@
         </div>
         {{ form.submit(class="btn btn-info form-control") }}
     </form>
+        </div>
+
+        <div class="col-md-2"></div>
+     </div>
 </div>
 
 
