Use different login for email

--- a/tracker/templates/base.html
+++ b/tracker/templates/base.html
@@ -70,6 +70,7 @@
 
 </div>
 
+
  <footer id="foot-menu">
         <div class="container">
             <div class="row">
@@ -85,7 +86,7 @@
                         <li>Consulting</li>
                     </ul>
                 </div>
-                <div class="col-md-3 mt-10">
+                <div class="col-md-3 pt-10">
                     <h4><a class="hd-lst" href="{{ url_for('main.contact') }}">Contact us</a></h4>
                     <ul class="bt-lst">
                         <li>Email:info@conexussolution.com</li>
@@ -95,6 +96,8 @@
             </div>
         </div>
     </footer>
+
+
 
 <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
         integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
